infrastructure/k8s/client-ClusterIP-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: client-deploy
  labels:
    app: client
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: parthahuja143/client
          ports:
          - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: client-clusterip-service
spec:
  selector:
    app: client
  type: ClusterIP
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
