infrastructure/k8s/comments-ClusterIP-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: comments-deploy
  labels:
    app: comments
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: parthahuja143/comments
          ports:
          - containerPort: 4001
---
apiVersion: v1
kind: Service
metadata:
  name: comments-clusterip-service
spec:
  selector:
    app: comments
  type: ClusterIP
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
