infrastructure/k8s/event-bus-ClusterIP-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: event-bus-deploy
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: parthahuja143/event-bus
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-ClusterIP-service
spec:
  selector:
    app: event-bus
  type: ClusterIP
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
