infrastructure/k8s/moderation-ClusterIP-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: moderation-deploy
  labels:
    app: moderation
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: parthahuja143/moderation
          ports:
          - containerPort: 4003
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-clusterip-service
spec:
  selector:
    app: moderation
  type: ClusterIP
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
