infrastructure/k8s/posts-ClusterIP-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: posts-deploy
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: parthahuja143/posts
---
apiVersion: v1
kind: Service
metadata:
  name: posts-ClusterIP-service
spec:
  selector:
    app: posts
  type: ClusterIP
  ports:
    - name: posts
      protocol: TCP
      port: 4005
      targetPort: 4005
