infrastructure/k8s/query-ClusterIP-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: query-deploy
  labels:
    app: query
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: parthahuja143/query
          ports:
          - containerPort: 4002
---
apiVersion: v1
kind: Service
metadata:
  name: query-clusterip-service
spec:
  selector:
    app: query
  type: ClusterIP
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
